chore: add ruff S, Java pre-commit hook + Maven Spotless/SpotBugs
Pre-commit:
- Add ruff S (flake8-bandit) security rules to root ruff.toml(covers normalizer/webhook-gateway/job-dispatcher; backend has divergent config — consolidation deferred to E5.2)
- Add pretty-format-java hook (google-java-format AOSP)
- Format-sweep all 24 Flink Java files

Maven:
- Add spotless-maven-plugin (google-java-format AOSP) to all 3 poms;
bound to verify phase
- Add spotbugs-maven-plugin to all 3 poms; failOnError=false during rollout, flip to true after first triage in E5.2
- ErrorProne deferred to E5.2 (Java 11 --add-exports complexity + per-check triage scope)

CI:
- Add java-build matrix job (event-router, insight-generator, pattern-matcher) running mvn -B verify; required for ci-success

Docs:
- Extend docs/PRE_COMMIT_EVALUATION.md with Java tooling section, Python additions, and E5.2 follow-up checklist

Co-Authored-By: Adam Keinan